--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build && cd server && node server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "seed": "node seeds/seed.js"
   },
   "keywords": [],
   "author": "",
