--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "npm run build && cd server && node server.js",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "seed": "node seeds/seed.js"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
